feat: Migrate to using Item API v3 for items and ingredients (#2259)
* chore: Update urls.json and UrlId to include V3 Item API routes

* feat: Migrate to using Item Api V3 (for items)

* feat: Migrate to using Item Api V3 (for ingredients), improve handling for items

* chore: Move to final V3.2 api, fix internal names

* fix: Revert GearRestrictions untradable name